[package]
name = "embagent"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version="0.4", features=["serde"] }
ctrlc = { version="3.2" }
env_logger = { version="0.9" }
log = { version="0.4" }
paho-mqtt = { version="0.11" }
serde = { version="1.0", features=["derive"] }
serde_json = { version="1.0" }
